apps/ntfy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
  type: ClusterIP
