apps/ntfy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: changeme
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ntfy
                port:
                  name: http
